# Sparse_Matrix

./: CMakeLists.txt  README.md  environment.yml
docs/: CMakeLists.txt  Doxyfile.in
docs/source/: conf.py  index.rst
include/: COOMatrix.h  CSCMatrix.h  CSRMatrix.h  DenseMatrix.h  DiagonalMatrix.h  MatrixOperations.h  SparseMatrix.h  test_matrix_operation.cpp
src/: CMakeLists.txt  COOMatrix.cpp  CSCMatrix.cpp  CSC_Format.cpp  CSRMatrix.cpp  DiagonalMatrix.cpp  MatrixOperations.cpp  SparseMatrix.cpp  main.cpp
src/matrix_generation/: CMakeLists.txt  original_matrix.cpp
src/matrix_generation/output/: dense_matrix_40k_1.txt  dense_matrix_40k_2.txt
src/matrix_operations/: CMakeLists.txt  matrix_multiplication.cpp
tests/: CMakeLists.txt  test_coo_matrix.cpp  test_csc_matrix.cpp  test_csr_matrix.cpp  test_diagonal_matrix.cpp  test_sparse_matrix.cpp  test_sparse_matrix.cpp.
tests/data/: dense_matrix.txt
